--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:f1Gmk1g/,iv:lTvJgrSsbZhVI0Qoei1BCEuk2H78UpBtJ6jsy9bs3bk=,tag:/iz4NB9MTeVSVt01qfjF8g==,type:str]
-ansible_user: ENC[AES256_GCM,data:Kl3+VCBE,iv:f3rhSGHAef+NagltoqBsZjWd5JZiAoS+aBkLySzsBQM=,tag:aSvtfmxy05XYTaRH9HYZAg==,type:str]
+kind: ENC[AES256_GCM,data:kSdVsqVP,iv:8vsYsP4eXEhPi68j/GAKfLTmB8N8jKtPQiYzLQKPTkM=,tag:0jb1vqeRdGsVxEUpV7JNeQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:quKyjXeF,iv:z/iwsLFz9i3Yotz5iww1dBrMdipmlTm0HX1TUQ1uUFE=,tag:e/T9/TMdv0UtF9kO1JCfoA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvWmFOQXdEekt6R2lSRk1K
-            d0Vkdjc0VWNaN0J1dDBISVlUKy9DOXRqc0FZCjltYXFqY2kwRlJIU09uKzNlWGd0
-            UVY3YkpGZzhxK0N6NjNIWHpaNkdkdkkKLS0tIHJrNDh4ajVxbVVZaDZFYjJ0RXVU
-            ZE1uT3YybGd0eXp5RFZ5cFU3Q2FBRE0Kik5JzI3xVgEXzQ8Onm6N56pe8f86cEUb
-            FOZhDRalVcEjQq7WpnmDgwVFSMFXS2kNw+hzYb7Xu0msUOWVsseelA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXRzAvWWdSbDNXa1FzSDRl
+            MWt1bzFTQ0x0RGNVeEpGZjBjb1RhYmxNaVhBCjJSell5cmszOERaLzNmV2RyTS9X
+            YWdCNmM3WTUxR3plN2N6cDlKV05UTUUKLS0tIGV4OEpweEV5a3ZYTlNjTHVWaDR1
+            OXVaOW5EZ2hYekMxazN4elpITExxdlkKtACTrqlYEFPvEUZ4Wf7Ls7lD7zr+tZNm
+            wvy7bXdRnSY/bmVifvVTBUy7et/nQHYSD9lcKOppDgFvxBPNjEbZ5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:wG4KsUR82c+xPCCJ64r/IJ/ZGJyYxakNCRhp34KKjnGsMNCwglGybIC538Xswkbzq0qeQK2JmyFbKJ0q9CDik1Almcct246k5ISTjX9npeoDnj6KeaUJnZZ9BZ76tevOFmuSj4KVKbqFRLd7WYDBFFmav/4Eh29TiBWju09zaD4=,iv:qoRhgs3EKLHRQpgqlR6eJfk+TyhomzrUNiHrW2YZQyM=,tag:kWA5vJgiUYVnvj7L/vHH0Q==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:xrKYZQdhbLtZyD1aYwngDHXCa8HeZFRIVLeOP/+BntV/G/93/uyMhLSoJMXoJ3djnRsMP8ueii8z6myQd7J8A/v/CmbRSZJdmI0HHfQPhn1+zxoMDTA4zQA0Zk7tSN2eA/steGw9LnT7JHY6pWi7qYmWRwxoyQDPkVJGGZ56yqM=,iv:yTpwJqrfbx0eI5sl8jrnGnEQC52PBtDQZcuGnyTkmsc=,tag:HFSWC2a50Y16YlvR9Kxggg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
