--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lnflRnO0,iv:4O0VP0NUUNutLn03Y7sHjuo2MhGnNwd9UbO3iK+TSNw=,tag:IjziVyHrhpjyrwMo4OesKg==,type:str]
-ansible_user: ENC[AES256_GCM,data:VPlRjgUA,iv:9KyMrRZsGAi4+GfbPQWkF6jmh+UiB7AIJy68+7Mi/Bo=,tag:acyPsVivBEbPqDMEMgyQsQ==,type:str]
+kind: ENC[AES256_GCM,data:n+ksoxy4,iv:sURh2ClgOfFXWQZMThiZ09VnXgJTvBnGVyMfwI6uVa8=,tag:9yScmtz7v6sVDa+aRgDnzA==,type:str]
+ansible_user: ENC[AES256_GCM,data:B9WY2f+E,iv:13q9Hm520ZeBLPR/mktnYNHLSeCwW22DCImvg7w1C1E=,tag:Jf7jdRYagOu4OCGz9nNRqg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlQmpWeDRLUFFycmpzekM2
-            TjB2NlB3Y1E2S1V1SWVhNy9jTjYwUFVjTTFzClNBYTA0NmNkRFZvc2RiZnhCek9v
-            dTQyQytibWlzTHFZejIvZ1haL09rb2MKLS0tIFBjSUFFY0NtSUY3WHhubjM4dGtO
-            RlJnNnhQOVFjWHl0NEFWR0tLTitsSEUK+0oRLw/YzggXuY/W8dEIC4Mjv58mU6Rr
-            TSUFraARGlMFpHnJfl8ggBhm8bz4a4of1Gedjbg4JB+irMoatzkQ6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZHhqR3JRaXMyL0dlckN1
+            T0xmQUV3V3NoWDVxbll1UFIvWWZBemw4R0dFCklUb1RZemdldHBHQWVKZUV3R1NF
+            YURnRndTTzBFZG1seEJXZkJLTFlPc3MKLS0tIEk0eitjdUhvQUJOekhqY0lvWnBh
+            TjRYM0JzalJUTGUxNHhwOUhWOWNyQ2MKDAEDBDAEKItRRhXUbKH+MKI3/PXnOAEX
+            PinDHzJs685sKnwlkqpAMBxPC9GPQ+c6aKqGsCBq8jHvI1FQTDvOcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:u+nj0rcHb9vPlv1FfOEvdrfePg+tyAjQmkL+skdVhEQ8Ot7mp8Hp3yVUbOkTiy36tX2S2UPTXp2IBZB3ThEx+u1+VfRZIpsQRGi3vsykNR22KrG1YuPzarsZ7dA6E6ypyLx/X8R0JG5gFTMgMRzqzisWtkBNNri5odcLUkXeiRM=,iv:5UMsS2X14pVkYUBUukl+0x8Y+M7t3snJBQPZrP/a0jA=,tag:U+lvZzEo6p/FETxUFyDocw==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:JRCl0X3ev7T5ZE63s6O4sW2eakFTCDItIQ1/oRLktgpt7C/TJqlJIJtw/pXwe0DHtywbLjvZNncAx6Uf1emy1Lt+MKbjfbjlFLPYRJNEPMRgn40c8jooLSXZmHyBfyoDiu5n7T0a//+hZ2SpIBp08JDOlzXzZl01jDr9D0lEmyY=,iv:qKBdkWpHb7H7/Uk6wNIRqIS4fFzFexvw7DS1pDzvSSE=,tag:oT+uQEdWIQgT7aJIfWltRQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
