--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:JT4x1++e,iv:brT487HppOnpGpTzg7pXTj2rASOBt7RmB+5af5JIYC4=,tag:czxGQQ2ZtFH89uuKzNY6VQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:o6ooeD2R,iv:QM87tDjvePaeDINDHjQmk7CV9Nq86wbpQf3WFBebYSA=,tag:jghZdrNkkcNtLUzfEoX2Sg==,type:str]
+kind: ENC[AES256_GCM,data:rIxg5Lhy,iv:askas8sVRv+njdtkq5ZSMUkQHJ4qBgnWsZMHTYQoe94=,tag:Sis+cTTxwHk6ykAjxJBLNw==,type:str]
+ansible_user: ENC[AES256_GCM,data:GLvTQIZZ,iv:LaJ5llXTjdhaEw5hFJ/YHOkn8uJZZqZDkbotIAl1HoM=,tag:nzMouc6ecMlmo/9FD+Tmiw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4OTVFWEdWTW9jbjFHN2Nu
-            czRIOFo4THlWMjhlaUhmU1ZoNXdxS01STldZCmtNemF0aFJtMUdpSytnOTBXWmNr
-            VDdHamQ0aE5KSHBodjNqTWQ1RDdCVm8KLS0tIGRQNGdLREFTdXd0cUhTaGF2SEJS
-            T0J2bEpYdjFPREd3UnQ0Z3RWUlRYZ2cKr/vAZHrOK79p0fwwCl8fRkulPR+m/LV4
-            ygJnYr5VrkFSca9ESbIBfRa/cHQFFQSFFrs3hc3lv4fxhT9lsTfXvg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpQVhRcVp4NXhVejZIMVJh
+            c3JRRmxvZ25QYWVZOUdyYXZNWWVsWTQ3MFVJCjVHYUNsNitwVWs3czdZZXJUajk1
+            TkZ1dEMxQWd1bENlaGwzaDgzRDMvZHcKLS0tIE5qVWp1VDFoZ1NwaURBd3N3OFMr
+            OXNvVWxMcDNXQWxlVHZIRlZPSW50N3MK3jEhu6oO9Z21AWHDUy51zKQR0mkj4CTO
+            6TreMA53WOBt48IwhLi/trspIfliW47KO+MYl5pYJ6leL8cyXtS9OA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:AvwYojj592iL+NvxxcTq5ZYmuHMCMRghKUDEJxGJgGUGucvRsYmKwx1kRbF5bAKpxIKBO/H6tDncU/YiVftDcVC2KXRBYESZ+hyLQ5/+OUnKRVribVQ8dR4eYVV3JwpIuiolk+VfTQIoFNG33Uh6feauQQzub4I0Ybv0Mh+muBc=,iv:eDsRGFrSxnzXRf9p7ezNz3tVa+LjCdg+1rZ9YjNQx+o=,tag:LGYakhG9uF8i9K39aNuRXw==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:X5379tyZ+53L+hnnsGK5DUNIntZLy+plMqDoMYk24+543d2XiaVPtv/uKgNwawgXmPrHyIYxs8pwrZMT5Hudj3bYSVHLATrNXmblTyk1UhccS9SFTuWAKbwo2+R9yOk01Njfd+dVCEhmpu6Gl8ecH/T9x9a2hdN6hQIYrec+GG4=,iv:LaAcJNLMKbggOqV25b7SGkssiUJ5h45mZK0BJ49k/Eg=,tag:nNP/49/UHuHnHJkdbs/d3A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
