--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:BHhLUs67,iv:ZJbM7OBObH9ElMikgbq5iHKS9B1Adlbe4MkT5rQm6ZQ=,tag:1CI+yN3ewfu82G5QX7oyYA==,type:str]
-ansible_user: ENC[AES256_GCM,data:dEGjyye+,iv:7A58+tgm2GifPnnwj5TrPEEHGPT6isWRGsRPSNntTRw=,tag:g9poVmHrbF2YJL1Pr8tY4w==,type:str]
+kind: ENC[AES256_GCM,data:o0FlVS5P,iv:N218a7eD4I+TZoHJRfKZEUzd9QBIiFHaO1X9ywK+biI=,tag:sDMLMGLiBw0SHG7SSGyG2Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:tMQTJyMN,iv:cUQmnbhCgu63o6EJTXFwbiV04J/iQjXspJAkfxf8IDQ=,tag:aVov3wf6HEwaxpeMaqXW3g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnWDgrK0V4dTVxTkREaG9l
-            L29aSW1oc3g4ZVpTbU95YnVNdkdENEFtQTE4CkVCV0tYWmRSVW03RFdHdG1qVXNS
-            NGJTMVd6YWl0VlhRbURZcVRZWFJzb3MKLS0tIEFaN3k1R20rZlJTQ1F1ZHBvK0hH
-            M3J6a2VMYTRBSnFZV1NYTmR5V2RtWEkK9lf1YTcITCHuI/kbCREBckOtDe294wc3
-            HA8QIs99OwjS4mW0bzDEpiDsVYlYdr2O8aVBe8hBGtOdLc6/FKGwDw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGaEk2c21zQnByWGdPd0lI
+            ZDhVVXdXbVFjakFUTi9oWkdvY3pJa0FpRTFvCkNHRmxxVSs1Vm9LVHo3dFJ2OW9X
+            bHZ4TGdUQlczbzI4S0Jic2ZiRTJxUEUKLS0tIG9CRmZNbS90WW54NzFyaU5ST242
+            Y2hjVVh5T1dlT2pWbVhBSGVDb3ZjZ00KTW+t7YChQpyjbDT1Hwd4COx+glcJmgJD
+            1hGFMbLswEIfMnXGsvsF9V6rIxlzNsoI70GF90pKbJoTrlbC1pqogg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:qjtWbDQvG4xcp4hp7nIZixq5jB3RZdouitROL6jd2KFahyvJFSKUcBYFEuP/CVKEEL438FUg0TFz7gc9YdZtPBlTSdZ8PA2Py5gk0EWfEdMPtrsOM/Q1Bp4tPPUocnhHLms2l16XzEJBE4zOExyWL2hgx66zbvquvMn0gnxR+s8=,iv:Te3n+vvajza5uRQnsHrWZVjRcD0ab8hJRIcyf7cAwn0=,tag:2WJK6z5quJr6x97fvKAa7A==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:HYX8Lp6Fp93Fm0Kuq4gO0RnuLI1sRapntVPwI0TajvIO/50PZb9NIX7Su/3fESV3GpwhmrPHj8hHXvxO2z9kLxj44yrSk6xi4idDtOBprZEeiwY0MX+BeaC7Wz91SSO3OXE8oE5KHMTynTOqXq+/qUaHgtpxh83WtVbB/hifPsg=,iv:/lXtURzV5gu/LOJphKwATF6q6zvOY5pjmWOv3AHKkEw=,tag:21f3tPpAWoBsFa20isOJYA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
