--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QkQjw8OEZjYsgB1fCYfTaphsowGQ,iv:sMd2yHQUVEOl+QvIZYfNG8KC2qvSmLc39X80iFBgkWQ=,tag:AOtfX8Nq7SVRmE5Y/ExVSA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:b2SB6gb0o/bodQVPiG0psliTAtfTigftQK/HAOVi0pOWhuq7zA==,iv:Yqm+adBH1rXLNjeleFrWBtpIMFeoUg9Uf4o/4lMW1DY=,tag:LCFFGMj38GlxRdJxr2SHoQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:1UKD4bllXVvNYcI=,iv:X3moy9o73x2eJrFFV+tXgqnJBTgNPWUg67nemL9Sn1Y=,tag:2gc4Hh8lm0sQ26bBf0YZdQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:a2/gCFOY6Kh1PafWk1tzV0fVC64V,iv:p6b2rMNvfcO6/ZuspYxbBWqjNj2seBeY7/rvgx0CJgs=,tag:qkO9+LjK/Q5Am0jdlM+YDg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:wIBwL0K1R5V4uZIJJEs7L9JuzSkUUvfIL3pAwoS3gWltpkvnYw==,iv:wnZ46LPToVT+I3UbI7ReQd7MRMNi0NhRvJPHbNa7vAQ=,tag:dWPKgwc/NnBqrnYtim8+Xw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:N/bPchJzZb7FqN8=,iv:hPCuLnAFL6MrLc+x6mNoNbDOh563Eu6aNZOGHsD8faU=,tag:HFvSu47Mqn8GHluYvqbeeg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvZHppY2gxMjVtQTY4KzND
-            Rm0wY0lCZW5mamNwZkk3YVNocVpsb2xOYkJrCmRkOVRKNGpIaWFEaTMzc2V6eFdS
-            SXlmSDV2dGlVcnYzY3cxT2JBVThuYlEKLS0tIFRmdzl6QmVKQ29NN3VBdkpLK2Vu
-            d25TSVp1SnNLNTJWUlRTcGhQLzUvemsKFRKrd+UrMS434t9kwm/w0LJQN7dC6EEd
-            wxErliXqbZ3/4p7WpVioPpA2ir3zxaJ+JcH6ncP750LEiTG1jnqA6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSk4xRTlud25iampzT3dq
+            VmNtOGhuSXBaODdWOFpxeVdwZFU3N09RSmo4Ck5uTjJoSDNZeE1GWUs2N3FnNUJx
+            amFGaHJ2UjR6Yko0VldqbERuSjVsWkUKLS0tIGJFcXd4OFZYR3hWajBkZE9SMTBi
+            T3A1ZnJlY1ZaZ3Jjb09rWi9wMEEvSUUKzU2/D76rIRnQ5TMRTSy1CBvA5vrTT/0h
+            qDjoZ9/owpMdtts6O/awY6rsoIojgMqiRTvnXuXOatouKmh2bg0vgw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:ywjyzCqQDXrZc+kBVBKY9rbnnnsNWxQU5GAaeY0TeoymELhaIG6q6+tj1wqLphYepW0I2JT5/ZlW3ty90QZo+dd3teIKvS+0fTqMFTHepi3lHQ8S7bhy9cb7fKYC7Odu13zHRcdojt6IOYuQtF2X4PrxF/J10v3BLToBFgnR9LE=,iv:3pGi7wmKVkFNLCpFYwh4lCoDEiiHPqJ+7FcRh3aj6u8=,tag:XPLlN2Ld81Zy+34KXNljNg==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:AJ/6Ykp6LSbH2nOmjSZjaiFIxWS7fnCUdpm71nVWLSLhmxptbcZlB94UypIj8ctC71FB0S08aHeg3eM3o47ElsOCwmtQJCPvIs06+rYN1yObbLbIXxBrYaya8k8gjMsfQyGXVHSoaZawg1rMuyx15HEZHTWHDzGcMELBHkijJLc=,iv:8aDjB9pdW62cFIqn1T8BBvKbr0h6AFuAdo57Z+Z4zsg=,tag:Qi1nuQ2yqiauo0L28wWVYg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
