--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:v6MZwxDFl7EKUI0=,iv:uIvurOgHnPmrQV76m6cdl/bc/qy53FLm5VoO+YP5Vb4=,tag:dUoZn6dwxqGIrto1oN7XCg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2U8oNyraEiKCU6jpFSGCT08ZHspt,iv:OCHjFOctfibFnE9wZNHKaUhGKeecLG4ZUMgmpbCtUB0=,tag:LLsbuqKiHos2vTaTZe5hDg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:cY23KMEPcF0nIGdWYXXxKNw+py8/DJFhbtlioLR3gFa1EQaGa44yXVB0aTXwN1Xj/JZbyPQzb3awJQqlXjWE0iCaPJLHyQY=,iv:JsagohCp7j2YMNXfm5N34RMJIQlBDOVByair3+KrbZA=,tag:g2wHQsAAxB579GSzQ8WwaQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:SjgbQyHdqnDXKAUOMrNney3x0NAPoLzLAdGh5Exyrb4JiZA=,iv:ozyCVZXiabw6Hw8TNgIBw088hnitGGXBHjauUh7Ecj8=,tag:UlinsCwmzbgr9oV9xfBu8g==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:eCptj8Y0EIOdw7PKobnjU0Wb/Q==,iv:VXzo9jQNsyA9z9M3L58rxtJxJN6HZnZoZYOgvTQltQs=,tag:uXU1NLcUNyl2DaWvwFHaXQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:vlNaPjzpwV/ZrE4tfMDL9bEK/S7r,iv:fOj94PsvhYVPSHBpTo6gpfGQhDemRmDKQgkXp4cCDn0=,tag:LpMbRAeQ36P4KWX7AvMxaQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZekwntQn5uI=,iv:OvR4tpsWv76rNN9FM9wV8YXLz1ax9Ki3V4leazPrJEg=,tag:Fz6ll86cew6Y+4rpDzPOYQ==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:DUpqNL8qYNE=,iv:CVYPTh1eCobD0+tN6gZ8yrkCEPCLRMiAugXRnjabF/g=,tag:ypn/bQ+eIYhjV0OJe0GH7A==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:pjeY2gEps/Gy7GgE4GcC9SpbOH7cTUnGutdr8TdnLGyMLKYvnOHTeWVTff2g03PqcoZIbmfqUT6d7UY760ORCg==,iv:sR9LHWJoG0jEB3OKwhLvQcF+hzZF3eSQcUmBG0QcMV8=,tag:AiMivkSIxuddMdfvK7IFOw==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:2uIGSoyo+vPqOEePe1hSzVoYIreNoe83C2OLaU7D1MQgejwy+CQ5/8htSzXImFE3JAugYL2AuEYenTZMySA7MQ==,iv:n2awlcqLK1kA1eLCu+2DnyyE0ZngRiLNGi7e8UbUTDU=,tag:/A1Ku8WqfuX6U9E6vA7JMg==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:UKuogOoxxC6g,iv:+8XeRtylejz8jpR84oRi6TYG9FmG6buQT9GOdkuGCEc=,tag:4Ne+fIth+G3YsWD/fcIIPw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:0tOghG3n/THMyXLmvGmS,iv:0Xp6AnIV09YhJgEDVGooQlMBxnedTPkCPIfsSz2bD64=,tag:i4cjXjHfLhWA3h/wlcmkWA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:J/yxBGGhasPE2bt1yB/tzgUiK38XebPOvFUdLMZEQLE43VdA0NP2pVd1dsoxSJBrLfY=,iv:IBEL0mAcBjiapePb6dzyAXIA5+lUX0+O1wAeRGPKTH0=,tag:m/KqMwnTc1do96jjXrSRZw==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:EjXuYc4//pbXJlgeI8U=,iv:z4YVAifoRmo1xvj6qqs86gjA6veYUas2Y9vrWX2zo5Y=,tag:lcA70iNd8dizMOoRC4+XqQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jeM4DdWLxmrCwEKC8LYhYj70THs=,iv:IeATMy+6pvRAzOjMuJODnrNJR2DOzMvV5gDIP5/e0n0=,tag:KZH+7g9JvNAxYJfakWGobg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:RTkLrti0qiY=,iv:RxX/7mIzTMBIndn7KEYOXak+Hx76ebSbykcIHtwePIw=,tag:IXJHAkvw5rnyqDVz8KQdHg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:1ux3R0IyMCSOpx/8,iv:BGL/UTTGA3y5fzBQ/oKZKPTd/Q3r2/m6svq+tWK+d7o=,tag:If8bu0M3RdEw2LF/d4Zspg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:gzL2uhKOyRsr,iv:yMdJFsyvb5L/rxz3Wy5t7WY86tGQODcB9aE9PE4fcQA=,tag:vSvkoDqwrmZMs4SltMkcQw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:xMLm0iI1ni9m,iv:fnrqJevB7uIsgzkhgJlxkRC2ul7DpyHV5dtmw8l0gA0=,tag:4e28VOgPummX7n221iFi4A==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:EcajLy1dEA==,iv:uyv5vBW/UkAhMiLRhMSjJn8u0LaY1HeUAKmJGvLQL3M=,tag:DT2gXMtHqxl35uyfLbixuQ==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Ex/k+YrSaDSG,iv:pZwfUJIUMA8+9uiD8Zy7FcYkCeddTXBUGmgyCSD4C10=,tag:F20v7+u58d5/fjO2X06/vQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:bXwnRwWihMCItEc=,iv:btkg1h6m8A+X+D+svtXyu73pqb42oFnWMxP+Tcuwpqo=,tag:yOceSVGKoIMfmuFkGlrAhw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xUDMPLnI5XCTBezWG7Sh75dAnoQS,iv:/HnNoLOAdEAr998as7PxEVm0VJFC9O5xOhxnBE6JAgA=,tag:f6IN0XjMNZCwa4AviepNow==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:/tsx0b/4HP0GyRYtcg0/ffsQgAsopBt1GxQmuPsoTf1JOFLez8bQtzsnLGCRb+RXBPbEt0m1BFAwYoUj7JE/mkqkYmF5/0A=,iv:BTWmM31BrX/e2mZYF7zirmdhPkSs1+o+9ljsLdKV1EY=,tag:zkp6Z9LJ2QU/DXQwFD7XNQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:+hcpBBRQtKhrLg+arHsk8S4EiAidDIGerha+0N+NOIPXy1w=,iv:G9hJP+1xILU6WRoGTZstYROajVPtAKxZ7/DoYn+PgMM=,tag:rEX7In52Q0F1HApwzcV+WA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:ZluFGwt1GfZd6+RahM92My5mqg==,iv:KGy3uzSwTXlQsr9BPC4IDkU0V5h2RoNCJTS1dTnqmK8=,tag:6eeIcuIh9aOfTJo5HNGLwQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:EXCf8tBXIsrpwEjR+AtZn50NOiao,iv:E0C4J2Yx/Ufpy14KjTelLMUF39AWBepkymQw14E/UMU=,tag:8le1UfHVdOcGg4lN8NkKqA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:6cbwzbUFmoI=,iv:ERb1DMo5PNKYWAdpClJSQ/6cmlLanfh7Hn+M+H+t1pA=,tag:946kgZjUVQhpsUY/lxj6WA==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:hl9J9T/FsSI=,iv:7aEgmQzrMCf5QrVqShofc3GaFy1Um5hqVLkKjO9AdZc=,tag:pmpBOk4qs5KhAElo8qkX+A==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:efag0NbIboIjHeYciS9dQu8UP4W86oX5ru5bVswFTDrWtrrIm+5EUNdMJow6LygMe2nJTcwiXHKUibsuqEiiJg==,iv:8QB+V87NEcfeKRJd825hYOGbCajonlGgKn+ikoB2+ms=,tag:M3K50wzmFi8hV2m/I4/etA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:b6+msKnROeFQDrEGkyktfxVneit8keNOVwdS62w2jHedbwSbc0dLIb9okLuf77e2o0LzGG2wu4UpO2iaVqoxoQ==,iv:BK+sK24lyhAOqSOv+VseBzJld7BR+A2cWyyDjezW2Dc=,tag:YGXZ8GqIl2py2vFSObdj+A==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:vHApqvWAF5cJ,iv:UnPvAiOfUT63SLmG+SeDOEtHGjNTmNIKam6n27dT52c=,tag:jQm2UTGDLyrRU9driicGyw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:/a8+9T00DTDU4fH2EalE,iv:DNDLtHZHm49AyxiIc44et2MvJxQSbTqtyT6DPe9dGe0=,tag:Lqekl0sqZjIq36A8lisBWw==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:WiSTr03XyI0I9DtANSEqpPn6QLIPC3D9wiTNp5lDoEYShasTiXareiNTp38rnFPCkaI=,iv:YSLak1OTJ88mlVgKODhVCCP9H9laffxYZYo28oXA97U=,tag:74emzFYjyn+6gWkpRrel+A==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:7JqbQiaHqkVnSf3tlKg=,iv:YiWeno+5Upjn46SWk0Uxlf8TmYZrHp+87nU4qoQq6vk=,tag:aQxn2C87IQD/36ggw7mn1Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:61Dx/7fKgz3lOprrBjAaOK2wsBc=,iv:mAU+nw8IJLLE1THvj6pHgyKH0+2RynGa7dKbDVYqd10=,tag:Q1Sw1fBp1nTC34/8S3q/sQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:DtMid/dorSI=,iv:hNziXp1RerLOINOBjDlsbP0XOiU6DBw5+tjwPfZxerI=,tag:moeCdfZQg7ISkv8l0Jow4w==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uWwovhYWO9HZ+Yyye/qp5GA2gbIY1CpjWE8VBu7zrRzlApmt+Ok=,iv:GQQyd8SQPCI9Xw3CPXy9+1QIVVmueEebH/A9T6XGYtw=,tag:W9brBkPXmlU34bdrwVU4bg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:kRq/d5brxnU=,iv:LyqkdRzsKrArSeCy0k3DybHqTn9VU8gBxrAn87zv46A=,tag:LHt0ALbIg1kVq+j3GOq5NQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:UZlzlKe4JJd0,iv:jXQ6TO6/jDbG3jMwiZDboxEBNYuM99zvmzk9TSjX1Ow=,tag:OO9skm+kCO8X+zoGR24xng==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KbP1PklFwQ==,iv:zJLjF/ISONl5K3EDbW2RPgvkBozxUx+sgpd1dJKEqKs=,tag:swKGbOkTi7za+DeCtZqsiQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:CxNeat+TBE5m,iv:aUrAd0vqw+s3yyp2Fnaa6JUumG1E5y/uagaNps3bnb4=,tag:+alDM//i+aMOj23NDH4KhA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSb3lDUy9WM05WRCt2VllC
-            Y3JsOWlBNXVMTmlPekZRNHBYdHdVYjd1dm5zClRoRGZzYXowR0I5eElOSlFINWhs
-            WHRWRDFDazhSL3Q2SUZlSXBhQ2tzRGMKLS0tIGhrUnUxWVE1b0tLelMrRjhFZUVv
-            UUlVR0dDNllhT1Q4SjZJRjlmSDV3bncK449H/duSBexPw+Z/vyes6Cje69VdYMsa
-            XL0p2HlCwuO2aRLvKbkLhvjD+OoFbhJylLSrKi7T/XXYo+FcdoD/8Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDRnRTOTlIaE1hY1pScmxM
+            MzFBQXJ5QUVnK0hpZUowbmhnNHMwOGxKR0NJCmgxKzUvbkM3OHlSQlZmTlBtdm1x
+            YlhXY0N6QVhsOXpxQit1NlNBNDJ4S0EKLS0tIGI2aS9xcTNiQ25MN3dRK2h1ZFVI
+            UkJKNWlEbXd0dVRzNks0V3NaaHM2K1UK/hyiBQAhg+ID1yYYYogptujrZXv3m763
+            Ux7fLzq2B/sd4uDGTx54bJu1gEOVVV5AiIZKzJMaHyGyXwnEY2F6+g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:irfhFKedXiBi86y6Ugvtv/McAh0E8MAfzXkusuovulzpkTXSYqU99U067R+Vh3+mwxOiX0wxg0yzIVvkNU7gN7NkEeUPsqlU3IUTUC95MHNexkIsc5p58Q9ZnwBTXSpVsBvdS0ARyOZPbCms93isqMqaWlb5AbDT11eijWM43AI=,iv:Gg/TQaO5w7Tx9x5HBHR3za1FYnx00BAJXrdk//R5LcU=,tag:scFixsgMc29joL4rVR40Cg==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:Jru7OkD6f8I+waevZqzch9L4BHyGbjlheTxrcb+bB/znFr4mXzDWk06La+cZEtujWgdCBvca4Sx8I/RYMsq4jVXKb4e237DwZymFHzsUmjIDGKgiRNPas9hZkdI8EjOfu9w6H1YEDjP3z8vFwhM4vtwGJtHQELVJXrWVFudOoqI=,iv:suElJS//4z1K3C0FG8uLIQYrMDugSaTiwczeSm/xYtk=,tag:gGIufbTzKiarX5TzDpL33Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
