--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:hr2uHLEO,iv:xF8TWq8NHX8XmZM63YUDdMlv6lYQ0vxW9zA0OVUQt6E=,tag:T0XIVmZsPbH/Q1HA3yBTqg==,type:str]
-ansible_user: ENC[AES256_GCM,data:VwfOrhtP,iv:+vlOsmA3UCEHy8vI+YgPVLX5IMcaxkWE+cbbBph0pnA=,tag:8RniHfnuNGFDtY58uxyuMA==,type:str]
+kind: ENC[AES256_GCM,data:sEC0JvTb,iv:PSn+ZdKNvCt/j9dvlJqeGjRuGrfFmfP9PpAyLU1H5nI=,tag:ELvJQSXQa+ElTCMc4KQESA==,type:str]
+ansible_user: ENC[AES256_GCM,data:EdZFqL7b,iv:2F+9t/wJXA4XDxu38yJCRO1MLcvRXhfgac3+lXl2fzg=,tag:GGjTfet10nR+KwIDBUtfOg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2ZDdxcllQVDMrRjV3NHg0
-            elM4VDZyZXBJSEpzdEJEcnI1N0ZZLzJOYWxjCi9QWGdubmFUT2t0NldBSE12ZmJj
-            OWdkTnREdFE1cU5JL2tjdXBnT3hHZ2MKLS0tIFlGbkxSQU8wOXBhc0NjeDBYdkFy
-            c2FQeFQ5a0tmeXRwQ0tuRUxzZHhqeWcKwNSwZO+rPRycs2XciQtXvpBKE+x5uAGk
-            W3jXUIGI6feY5l/NY6dXpnzbW11jFiARSQ4tjLymcJaKvPkHkwOQtg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBYnp4UkN2eWwwRjdONVA1
+            RzRSVGxRZWtENlB2eFFlYmQrL1ZjdVFXVVM0Cko1ZzU0NncyZGpqbmxwTFY3MFVr
+            VWs4ckFCRjFVTnl0ZWZ6KzFhV1BZR0UKLS0tIEgwSmU4bWFiMjJKbHNUQXBPVExF
+            UG1pNlY5UkxxRm10NE4vU1ArSlg0YkkKuprJGZFokM8Mi/MgsiHVQnRS0HMMUO7q
+            L2Jxfn00/6FA7NQeaQK/F5Tko7dM6lTRbN2Bhd9vt0acqaDNGPDUZg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:xHNuOy7XFBKmsZzlkuXWDBZOHSM0iCD/PpNUGQvIFWAk5KSjepJYUdRt+Gkn7bs1gI7MSEzjuRXtTGE/RMypA8SvnXbW1CLKhIEWrb0wYqE8pE09yD4sesmHWdyX0/WH0EexP1Dx5znKZgGwyACs8CNE2F+xE3yGv8yz9bovbbw=,iv:qEsXZAXJXtO45p9rIZCevJKs3k6yuviEQb2CQv8xK7k=,tag:b8LJeXOovFaCIT4Bb303ag==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:dNbz+fxXPpD9LhAbIpgbeTMVOqkubW8IBlrvier1T5nkrcnvyLpS3o1GSPM/lD16EXHYXJ94C/5wPbvw7RGm61EepLYSfyWUt6nvyhuf31MvQy+BbSRgNdwGKWnzRxrGdo3UciyOxo1L525GpxvkBJVHiDOFRIPzuGuBq4xCo7E=,iv:9apILZcNGrAYYjtuthLVzsTXQ2ZHu+VDOqksihdVD/8=,tag:B95xRxrm0/DfAlYn6e2bFw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
