--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:DP2OsbdQ,iv:ZNTDWcdHZK1QDZCJ52dOLoovD8Ha/enfNjNSA0KnxZU=,tag:Z5sGOzuIYmLvbIvSJUIfRQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ls+2+REz,iv:i51CssK2RIcfhRZjOhTedEf3mlbhX7habFtkFxuzPrU=,tag:HHHEE/EvmzBWULIhITB4pw==,type:str]
+kind: ENC[AES256_GCM,data:gtU7q57X,iv:GbQjsdYawIWhoBwl19foi+6l0wQxpjE13wQ7mXuD6rE=,tag:OY36i4G/R3BhF1Q8WGjcIA==,type:str]
+ansible_user: ENC[AES256_GCM,data:UK5mYuy0,iv:yFTf8eAZOKOAGK2/XjdaSswoWKieIU6/FrASVyq9LzQ=,tag:NqjQAkiB3TNSqwhbwx33Bw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxQ2h2QWtTR1FxQnZaY2lF
-            bFlERk1hSEVuUlhad0ozeXpTSWxNbEZQejJvCm0wVGhiRG51c2lBaHhRSHhNS2ZY
-            emw0NDljYVpRR0E2YWhQU2ExMkFTSUEKLS0tIDhLVUtKcXdVMWF2WkZUVjJLWFhQ
-            STJTZWx1bjVBNXNzNEkvRG9uNXZES0EK6mwb0VciI37O4FT2Ksh9oDe7RNCpprbC
-            +LdQcZeNmUtQGkzq94JM+fGbMDyExr2dNgB+yyxdc2MHEsxqu+vEIg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJMHB5YVpzQnBVemE4ZDhj
+            K3ZJK3FiQ1k2bkV0RnIzcFBpalVsVW1QV1dJCklDamJHQ0dnbVIxR1g5azNuNWFx
+            SkN2RnU1clpEL09zUS9TbFNDZzNKS00KLS0tIFRyWU43S3BPT1Zrbk4vOGxjWloz
+            VE0zM21VT3B6aXQ4SEdHODZvdStrNEEKoerRODkjeAMD/PFKUsFiBvj2hbpK3qtw
+            /d7u3jYKlNx9yitaxlfPT8xwMBNznTHKE6eGDA0w8mDQ03zjvTvDNA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T03:29:43Z"
-    mac: ENC[AES256_GCM,data:W9oidKI/EGwQL8I2x6BlcsKSpPyFNM8ntjxZMqRHN9j/srUKwKhNhx0cTQnzVAPUbzekZJLdCdWQGl+i/kFE3shxxLd2P/BzJs7ahbn5lJngTllBt0f5iv3dQDtFGcoDu4cgcfLn1RamoIItVml2a3EaNfNJUv0FWh24XVL3pAU=,iv:wzBKhyV80/Z5U+2jFl34Q9qL28M+krD9/c3PTu934IE=,tag:7DQaQBt8Un1TB3AtbBMPog==,type:str]
+    lastmodified: "2023-02-18T05:17:56Z"
+    mac: ENC[AES256_GCM,data:zJgiBVVS9IG2eZA7B2gMNOz0oC67jJggmapCgjmabh7k+r6QkUDcuQDxsVl9Hq4GzdWThsSaItPDDi0zVTBq+SxUYxWZXXsc5paifu4YackAXNVlQfFWZAjUkpSVFA2XQFG4K52QUeCq04Y7rzZBiC+gf9LsVkD3vz1Knzr7/ak=,iv:i0adCIsLE2EDCpweDD5NYemun6BLY/nRzvyKqLXG5WU=,tag:DypvD+sw7Cs6JEmaq7nJmg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
